platform_versioned_docs/version-4.11.0/api/_partials/resources/clusters/reference.mdx

import Metadata from "../metadata/reference.mdx"

<Metadata />



<details className="config-field" data-expandable="true">
<summary>

## `spec` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec}



</summary>




<details className="config-field" data-expandable="false" open>
<summary>

### `displayName` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-displayName}

If specified this name is displayed in the UI instead of the metadata name

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `description` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-description}

Description describes a cluster access object

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

### `owner` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-owner}

Owner holds the owner of this object

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `user` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-owner-user}

User specifies a Loft user.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `team` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-owner-team}

Team specifies a Loft team.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `config` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-config}

Holds a reference to a secret that holds the kube config to access this cluster

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `secretName` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-config-secretName}



</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `secretNamespace` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-config-secretNamespace}



</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `key` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-config-key}



</summary>



</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `local` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">boolean</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-local}

Local specifies if it is the local cluster that should be connected, when this is specified, config is optional

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `networkPeer` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">boolean</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-networkPeer}

NetworkPeer specifies if the cluster is connected via tailscale, when this is specified, config is optional

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `managementNamespace` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-managementNamespace}

The namespace where the cluster components will be installed in

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `unusable` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">boolean</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-unusable}

If unusable is true, no spaces or tenant clusters can be scheduled on this cluster.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

### `access` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-access}

Access holds the access rights for users and teams

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `name` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-access-name}

Name is an optional name that is used for this access rule

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `verbs` <span className="config-field-required" data-required="true">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-access-verbs}

Verbs is a list of Verbs that apply to ALL the ResourceKinds and AttributeRestrictions contained in this rule. VerbAll represents all kinds.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `subresources` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-access-subresources}

Subresources defines the sub resources that are allowed by this access rule

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `users` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-access-users}

Users specifies which users should be able to access this secret with the aforementioned verbs

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `teams` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-access-teams}

Teams specifies which teams should be able to access this secret with the aforementioned verbs

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `metrics` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-metrics}

Metrics holds the cluster's metrics backend configuration

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `replicas` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">integer</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-metrics-replicas}

Replicas is the number of desired replicas.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

#### `resources` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-metrics-resources}

Resources are compute resource required by the metrics backend

</summary>




<details className="config-field" data-expandable="true">
<summary>

##### `limits` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-metrics-resources-limits}

Limits describes the maximum amount of compute resources allowed.
More info: https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `requests` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-metrics-resources-requests}

Requests describes the minimum amount of compute resources required.
If Requests is omitted for a container, it defaults to Limits if that is explicitly specified,
otherwise to an implementation-defined value. Requests cannot exceed Limits.
More info: https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `claims` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-metrics-resources-claims}

Claims lists the names of resources, defined in spec.resourceClaims,
that are used by this container.

This field depends on the
DynamicResourceAllocation feature gate.

This field is immutable. It can only be set for containers.


</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `name` <span className="config-field-required" data-required="true">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-metrics-resources-claims-name}

Name must match the name of one entry in pod.spec.resourceClaims of
the Pod where this field is used. It makes that resource available
inside a container.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `request` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-metrics-resources-claims-request}

Request is the name chosen for a request in the referenced claim.
If empty, everything from the claim is made available, otherwise
only the result of this request.


</summary>



</details>


</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `retention` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-metrics-retention}

Retention is the metrics data retention period. Default is 1y

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

#### `storage` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-metrics-storage}



</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `storageClass` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-metrics-storage-storageClass}

StorageClass the storage class to use when provisioning the metrics backend's persistent volume
If set to "-" or "" dynamic provisioning is disabled
If set to undefined or null (the default), the cluster's default storage class is used for provisioning

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `size` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-metrics-storage-size}

Size the size of the metrics backend's persistent volume

</summary>



</details>


</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `opencost` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-opencost}

OpenCost holds the cluster's OpenCost backend configuration

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `replicas` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">integer</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-opencost-replicas}

Replicas is the number of desired replicas.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

#### `resources` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-opencost-resources}

Resources are compute resource required by the OpenCost backend

</summary>




<details className="config-field" data-expandable="true">
<summary>

##### `limits` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-opencost-resources-limits}

Limits describes the maximum amount of compute resources allowed.
More info: https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `requests` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-opencost-resources-requests}

Requests describes the minimum amount of compute resources required.
If Requests is omitted for a container, it defaults to Limits if that is explicitly specified,
otherwise to an implementation-defined value. Requests cannot exceed Limits.
More info: https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `claims` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-opencost-resources-claims}

Claims lists the names of resources, defined in spec.resourceClaims,
that are used by this container.

This field depends on the
DynamicResourceAllocation feature gate.

This field is immutable. It can only be set for containers.


</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `name` <span className="config-field-required" data-required="true">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-opencost-resources-claims-name}

Name must match the name of one entry in pod.spec.resourceClaims of
the Pod where this field is used. It makes that resource available
inside a container.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `request` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-opencost-resources-claims-request}

Request is the name chosen for a request in the referenced claim.
If empty, everything from the claim is made available, otherwise
only the result of this request.


</summary>



</details>


</details>


</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `argoCD` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-argoCD}

ArgoCD holds the cluster's argo cd configuration

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `enabled` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">boolean</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-argoCD-enabled}

Enabled defines if argo cd is enabled

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `connector` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-argoCD-connector}

Connector specifies the argo cd connector name

</summary>



</details>


</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

## `status` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#status}



</summary>




<details className="config-field" data-expandable="false" open>
<summary>

### `phase` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#status-phase}



</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `reason` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#status-reason}



</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `message` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#status-message}



</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

### `conditions` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#status-conditions}

Conditions holds several conditions the cluster might be in

</summary>



</details>


</details>
